# eccsi-sakke-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  NOTICE_KO  README(Ko).md  README.md  README_KO.md
include/: eccsisakke_export.h
include/eccsi/: eccsi.h
include/sakke/: SAkkeGroupManager.h  SakkeParameterSet.h  sakke.h  shahash.h
include/utils/: EcPointParser.h  Logger.h  LoggerMacro.h  OctetString.h  Random.h
src/eccsi/: eccsi.cpp
src/sakke/: SakkeGroupManager.cpp  SakkeParameterSet.cpp  sakke.cpp
src/utils/: Logger.cpp  OctetString.cpp  Random.cpp
test/: demo.cpp
